@@ -3,8 +3,10 @@ git-core (1:1.5.4~rc4-1) experimental; urgency=low
   * new upstream release candidate.
   * debian/diff/0003-bug-448655-check-etc-mailname-if-author-email-is-un.diff:
     adapt; don't warn if /etc/mailname does not exist (closes: #461844).
+  * debian/rules: install /usr/share/gitk/ into the gitk package, not
+    git-core.
 
- -- Gerrit Pape <pape@smarden.org>  Mon, 21 Jan 2008 14:30:04 +0000
+ -- Gerrit Pape <pape@smarden.org>  Mon, 21 Jan 2008 21:15:21 +0000
 
 git-core (1:1.5.4~rc3-1) experimental; urgency=low
 
